# seqd

./: .gitignore  README.md  pyproject.toml
seqd/: __init__.py  _annual.py  _changepoint.py  _forecast.py  _holiday.py  _seqdforecaster.py  _structures.py  _trend.py  _utils.py  _weekly.py
tests/: test_annual.py  test_changepoint.py  test_holiday.py  test_integration.py  test_seqdforecaster.py  test_trend.py  test_weekly.py
